--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,40 +1,32 @@
- <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item">
+      <%= link_to root_path, class: "navbar-brand" do %>
+        <%= image_tag('ChefSpaceLogo.png') %>
+      <% end %>
+    </li>
+  </ul>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <%= link_to root_path, class: "navbar-brand" do %>
-          <%= image_tag('ChefSpace-logo.png') %>
-        <% end %>
+        <%= link_to "Locations", locations_path, class: "nav-link" %>
       </li>
-      <li class="nav-item">
-        <%= link_to root_path, class: 'nav-link' do %>
-          <h3 class="mt-2">Chef_Space</h3>
-        <% end %>
-      </li>
-    </ul>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to "Locations", locations_path, class: "nav-link" %>
+          <%= link_to "Bookings", bookings_path, class: "nav-link" %>
         </li>
-          <% if user_signed_in? %>
-            <li class="nav-item">
-              <%= link_to "Bookings", bookings_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link" %>
-            </li>
-          <% else %>
-            <li class="nav-item">
-              <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
-            </li>
-          <% end %>
+        <li class="nav-item">
+          <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link" %>
         </li>
-      </ul>
-    </div>
-  </div>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
+        </li>
+      <% end %>
+    </li>
+  </ul>
+</div>
+</div>
