--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,6 +1,5 @@
 .footer {
   height: 32px;
-  // padding: 58px 627px;
   margin-top: auto;
   position:absolute;
   align-items: center;
@@ -11,12 +10,12 @@
 
 .footer-links {
   text-align: center;
-  // width: 100vw;
+
 }
 
 /* Icons */
 .footer-links a {
-  color:gray;
+  // color:gray;
   font-size: 28px;
   text-align:center;
   align-items: center;
@@ -29,23 +28,19 @@
   margin:0 2px;
 }
 
-#a:hover {
-  color: black;
-}
-
 /* pop-up text */
 #a span {
   color:black;
   background: white;
   position:absolute;
-  font-family:sans-serif;
+  font-family:$body-font;
   bottom:0;
   left:-25px;
   right:-25px;
   padding:5px 7px;
   z-index:-1;
   font-size:14px;
-  border-radius:2px;
+  border-radius:20%/50%;
   visibility:hidden;
   opacity:0;
   -o-transition:all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -70,11 +65,49 @@
 /* text pops up when icon is in hover state */
 #a:hover span {
   bottom:32px;
+  background:#F4F4F4;
   visibility:visible;
   opacity:1;
   z-index:2;
 }
 
+.abdul{
+  color:#0E0000;
+  opacity: 0.5;
+  transition: all .2s ease-in-out;
+  &:hover{
+    opacity: 1;
+    color:#0E0000;
+  }
+}
 
+.thomas{
+  color:#57bc90;
+  opacity: 0.5;
+  transition: all .2s ease-in-out;
+  &:hover{
+    opacity: 1;
+    color:#57bc90;
+  }
+}
 
+.simon{
+  color:#ff9d47;
+  opacity: 0.5;
+  transition: all .2s ease-in-out;
+  &:hover{
+    opacity: 1;
+    color:#ff9d47;
+  }
+}
+
+.kirk{
+  color:#77c9d4;
+  opacity: 0.5;
+  transition: all .2s ease-in-out;
+  &:hover{
+    opacity: 1;
+    color:#77c9d4;
+  }
+}
 
