--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -12,10 +12,10 @@ html, body {
   flex: 1 0 auto;
   min-height: 100vh;
   margin-top: 100px;
-  background-size:cover;
-  height:100%;
-  background: linear-gradient( rgba(0, 0, 0, -0.5), rgba(0, 0, 25, 0.5) ), image-url('https://qtw0v3mso2e1esf9u3xzvfo5-wpengine.netdna-ssl.com/wp-content/uploads/2016/01/Grey-Gradient-Background-6.jpg');
-}
+  background-size: cover;
+  background: rgb(164,164,164);
+  background: linear-gradient(0deg, rgba(164,164,164,1) 23%, rgba(255,255,255,1) 85%, rgba(255,255,255,-0.5) 100%);
+  }
 
 
 .booking-wrapper {
